# twenty-four-point-game

./: .gitignore  README.md  dataset_example.jsonl  deepspeed_zero2.json  generate_dataset.py  infer.ipynb  infer.py  main.py  pyproject.toml  sft.sh  train.py
