[project]
name = "twenty-four"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "deepspeed>=0.17.4",
    "flash-attn>=2.8.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "modelscope>=1.28.2",
    "setuptools>=80.9.0",
    "swanlab>=0.6.8",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "trl>=0.21.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
